--- a/style.css
+++ b/style.css
@@ -3,6 +3,58 @@ body {
   background-color: #0598b9;
   margin: 0% 20% 5% 20%;
 }
+.home-page{
+  margin: 0%;
+
+}
+.header-data{
+  background-image: url(image/home.jpeg);
+  width: 100%;
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position:relative;
+}
+#web_logo{
+  margin-left: 40px;  
+  width: 80px;
+  height: 90px;
+  border-radius: 50%;
+}
+.header_container{ 
+  background-color:rgb(255, 255, 255,0.6) ;
+  width: 100%;
+  height: 12vh;
+  position: absolute; 
+}
+
+.header-list li{
+  float: inline-start;
+  padding-right: 20px;
+  list-style:none;
+  text-decoration: none;
+  font-size: 18px;
+  display: inline; 
+
+}
+
+.header-list{
+  position:absolute;
+  right:15px;
+  top:20px;
+  padding-right: 30px;
+}
+
+.header-list ul a{
+  text-decoration: none;
+  color: black;
+}
+
+a:hover{
+  font-size: 20px;
+  background-color: rgb(84, 130, 223);
+}
 #title {
   text-align: center;
   text-shadow: 5px 5px 10px white;
@@ -40,5 +92,100 @@ h1.title-LATA {
 }
 #tribute-link {
   text-decoration: none;
-  color: black;
+  color: rgb(248, 242, 242);
+}
+.developer{
+  color: #000;
+}
+.footer{
+  background-color: #343a40;
+  min-height: 80px;
+  color: #6bc449;
+}
+.copy-r{
+  font-size: 18px;
+  margin-top: 25px;
+  margin-left: 10px;
+  text-transform: capitalize;
+  padding-top: 10px;
+}
+.social-icons{
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  max-height: 80px;
+  padding-right: 10px;
+}
+.fa-brands, .fa-solid{
+  padding-right: 15px;
+  padding-bottom: 10px;
+}
+.fa-brands:hover,
+.fa-solid:hover{
+  color: #fff;
+  font-size: 30px;
+}
+.Tittle {
+  text-transform: uppercase;
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+  color: white;
+}
+.details_Form {
+  background-color: white;
+  padding: 20px;
+  margin: 20px 100px;
+}
+label{
+  color: red;
+}
+input{
+  width: 96%;
+  padding-right: 10px;
+  padding-top: 3px;
+  margin-top: 5px;
+  font-family: 'Times New Roman';
+}
+.input_data {
+  margin-bottom: 10px;
+}
+.button_input{
+  text-align: center;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+#Continue{
+  background-color: darkcyan;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+  border: 0px;
+  border-radius: 5px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+.Text{
+  text-align: center;
+  color: white;
+  font-style: italic;
+}
+.footer1{
+  /* background-color: #343a40; */
+  height: 120px;
+  width: 100%;
+  margin-top: 625px;
+  color: #6bc449;
+  position: absolute;
+}
+.copy-r1{
+  font-size: 18px;
+  margin-top: 25px;
+  margin-left: 10px;
+  text-transform: capitalize;
+  padding-top: 5px;
+  align-content: center;
+}
+#tribute-link1{
+  text-decoration: none;
+  color: rgb(5, 0, 0);
 }
