--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
 }
 #web_logo{
   margin-left: 40px;  
-  width: 80px;
-  height: 90px;
+  width: 90px;
+  height: 110px;
   border-radius: 50%;
 }
 .header_container{ 
@@ -64,6 +64,9 @@ a:hover{
   display: inline-block;
   width: 100%;
   height: 40%;
+}
+.options{
+  font-size: 20px;
 }
 #caption {
   font-size: 17px;
@@ -170,11 +173,10 @@ input{
   font-style: italic;
 }
 .footer1{
-  /* background-color: #343a40; */
   height: 120px;
   width: 100%;
-  margin-top: 625px;
-  color: #6bc449;
+  margin-top: 850px;
+  color: #081a01;
   position: absolute;
 }
 .copy-r1{
@@ -184,8 +186,4 @@ input{
   text-transform: capitalize;
   padding-top: 5px;
   align-content: center;
-}
-#tribute-link1{
-  text-decoration: none;
-  color: rgb(5, 0, 0);
 }
