--- a/style.css
+++ b/style.css
@@ -1,59 +1,15 @@
 
 body {
-  background-color: #0598b9;
+  background-image: url(image/background.svg);
   margin: 0% 20% 5% 20%;
-}
-.home-page{
-  margin: 0%;
-
-}
-.header-data{
-  background-image: url(image/home.jpeg);
-  width: 100%;
-  height: 100vh;
-  background-position: center;
+   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position:relative;
 }
-#web_logo{
-  margin-left: 40px;  
-  width: 90px;
-  height: 110px;
-  border-radius: 50%;
-}
-.header_container{ 
-  background-color:rgb(255, 255, 255,0.6) ;
-  width: 100%;
-  height: 12vh;
-  position: absolute; 
-}
+.home-page{
+  margin: 0%;
 
-.header-list li{
-  float: inline-start;
-  padding-right: 20px;
-  list-style:none;
-  text-decoration: none;
-  font-size: 18px;
-  display: inline; 
-
-}
-
-.header-list{
-  position:absolute;
-  right:15px;
-  top:20px;
-  padding-right: 30px;
-}
-
-.header-list ul a{
-  text-decoration: none;
-  color: black;
-}
-
-a:hover{
-  font-size: 20px;
-  background-color: rgb(84, 130, 223);
 }
 #title {
   text-align: center;
@@ -171,19 +127,4 @@ input{
   text-align: center;
   color: white;
   font-style: italic;
-}
-.footer1{
-  height: 120px;
-  width: 100%;
-  margin-top: 850px;
-  color: #081a01;
-  position: absolute;
-}
-.copy-r1{
-  font-size: 18px;
-  margin-top: 25px;
-  margin-left: 10px;
-  text-transform: capitalize;
-  padding-top: 5px;
-  align-content: center;
 }
